<resources>
    <string name="app_name">
        Canal Vinícius Thiengo
    </string>


    <!-- MainActivity -->
    <string name="channel_name">
        Vinícius Thiengo
    </string>
    <string name="channel_desc">
        Seu canal sobre Desenvolvimento de Aplicativos
        Android e TI.
    </string>
    <string name="youtube_content_icon_content_desc">
        Ícone do YouTube.
    </string>
    <string name="channel_thumb_content_desc">
        Thumb do canal YouTube Vinícius Thiengo.
    </string>
    <string name="channel_toast_alert">
        É preciso ter o aplicativo do YouTube instalado
        para acessar o canal.
    </string>


    <!-- Menu -->
    <string name="item_menu_last_video">
        Vídeo
    </string>
    <string name="item_menu_social_networks">
        Redes
    </string>
    <string name="item_menu_play_lists">
        Play Lists
    </string>
    <string name="item_menu_exclusive_groups">
        Grupos
    </string>
    <string name="item_menu_about_channel">
        Sobre
    </string>
    <string name="item_menu_books">
        Livros T.I.
    </string>
    <string name="item_menu_courses">
        Cursos T.I.
    </string>
    <string name="item_menu_business">
        Business
    </string>


    <!-- LastVideoFragment -->
    <string name="last_video_content_title">
        Último vídeo liberado
    </string>
    <string name="last_video_play_content_desc">
        Ícone de play do vídeo.
    </string>
    <string name="volume_icon_content_desc">
        Ícone de controle volume.
    </string>
    <string name="head_phones_icon_content_desc">
        Ícone de fones de ouvido.
    </string>
    <string name="video_resolution_icon_content_desc">
        Ícone de controle de resolução (HD).
    </string>
    <string name="like_icon_content_desc">
        Ícone de like, gostei do conteúdo.
    </string>
    <string name="touch_to_watch">
        Toque para assistir
    </string>
    <string name="lave_a_comment">
        Deixe seu comentário
    </string>
    <string name="last_video_toast_alert">
        É preciso ou o aplicativo do YouTube ou um navegador
        Web para que o vídeo \"%s\" comece.
    </string>



    <!-- SocialNetworksFragment -->
    <string name="social_networks_content_title">
        Todas as redes do canal com conteúdos exclusivos
    </string>
    <string name="social_network_icon_content_desc">
        Ícone de identificação da rede do canal.
    </string>
    <string name="social_network_toast_alert">
        É preciso ao menos um aplicativo de navegador Web
        para você poder acessar a rede \"%s\" do canal.
    </string>


    <!-- PlayListsFragment -->
    <string name="playlists_content_title">
        PlayLists do canal
    </string>
    <string name="playlist_icon_content_desc">
        Ícone de PlayList do YouTube.
    </string>
    <string name="playlist_toast_alert">
        É preciso ou o aplicativo do YouTube ou um navegador
        Web para que a PlayList \"%s\" seja acessada.
    </string>


    <!-- GroupsFragment -->
    <string name="groups_content_title">
        Grupos exclusivos do canal
    </string>
    <string name="groups_desc">A
        seguir todos os grupos exclusivos do canal que você
        pode fazer parte. Estamos esperando por você também
        nas nossas comunidades exclusivas.
    </string>
    <string name="groups_icon_content_desc">
        Ícone de identificação da plataforma do grupo
        exclusivo para seguidores.
    </string>
    <string name="groups_toast_alert">
        É preciso o aplicativo do \"%s\" para abrir o grupo
        exclusivo \"%s\".
    </string>


    <!-- AboutChannelFragment -->
    <string name="about_channel_content_title">
        Conheça um pouco mais do porquê do canal
    </string>
    <string name="about_channel_full_desc"><b>What is Lorem Ipsum?</b>

        \n\nLorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type
        specimen book. It has survived not only five centuries, but also the leap into
        electronic typesetting, remaining essentially unchanged. It was popularised in
        the 1960s with the https://www.thiengo.com.br release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including
        versions of Lorem Ipsum.

        \n\n<b>Where does it come from?</b>

        \n\nContrary to popular belief, Lorem Ipsum is not simply random text. It has roots
        in a piece of classical Latin literature from 45 BC, making it over 2000 years
        old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,
        looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum
        passage, and going through the cites of the word in classical literature,
        discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32
        and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil)
        by Cicero, written in 45 BC. This book is a treatise on the theory of ethics,
        very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem
        ipsum dolor sit amet..", comes from a line in section 1.10.32.

        \n\nThe standard chunk of Lorem Ipsum used since the 1500s is reproduced below for
        those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et
        Malorum" by Cicero are also reproduced in their exact original form, accompanied
        by English versions from the 1914 translation by H. Rackham.

        \n\n<b>Where does it come from?</b>

        \n\nContrary to popular belief, Lorem Ipsum is not simply random text. It has roots
        in a piece of classical Latin literature from 45 BC, making it over 2000 years
        old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,
        looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum
        passage, and going through the cites of the word in classical literature,
        discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32
        and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil)
        by Cicero, written in 45 BC. This book is a treatise on the theory of ethics,
        very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem
        ipsum dolor sit amet..", comes from a line in section 1.10.32.

        \n\nThe standard chunk of Lorem Ipsum used since the 1500s is reproduced below for
        those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et
        Malorum" by Cicero are also reproduced in their exact original form, accompanied
        by English versions from the 1914 translation by H. Rackham.

        \n\n<b>Where does it come from?</b>

        \n\nContrary to popular belief, Lorem Ipsum is not simply random text. It has roots
        in a piece of classical Latin literature from 45 BC, making it over 2000 years
        old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,
        looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum
        passage, and going through the cites of the word in classical literature,
        discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32
        and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil)
        by Cicero, written in 45 BC. This book is a treatise on the theory of ethics,
        very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem
        ipsum dolor sit amet..", comes from a line in section 1.10.32.

        \n\nThe standard chunk of Lorem Ipsum used since the 1500s is reproduced below for
        those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et
        Malorum" by Cicero are also reproduced in their exact original form, accompanied
        by English versions from the 1914 translation by H. Rackham.
    </string>


    <!-- BooksFragment -->
    <string name="books_content_title">
        Conheça meus livros
    </string>
    <string name="book_cover_content_desc">
        Ícone de livro.
    </string>
    <string name="books_toast_alert">
        É preciso ao menos um navegador Web para abrir a
        página do livro \"%s\".
    </string>


    <!-- CoursesFragment -->
    <string name="courses_content_title">
        Conheça meus cursos em vídeo
    </string>
    <string name="course_cover_content_desc">
        Ícone de curso em vídeo.
    </string>
    <string name="complement_amount_videos">
        🎥 %d vídeo aulas
    </string>
    <string name="course_toast_alert">
        É preciso um navegador Web para abrir a página do
        curso \"%s\".
    </string>


    <!-- BusinessContactFragment -->
    <string name="business_contacts_content_title">
        Quer anúnciar? Fechar negócios?
    </string>
    <string name="business_contacts_desc">A
        seguir os canais de contato comercial com o
        canal e o Blog.

        \n\nIsso para que você possa colocar a sua marca em
        todas as mídias do canal e assim crescer
        exponencialmente a sua <em>brand</em>.
    </string>
    <string name="business_contact_icon_content_desc">
        Ícone de identificação da plataforma de contato
        para negócios com o canal.
    </string>
    <string name="business_contact_toast_alert">
        É preciso o aplicativo \"%s\" para poder entrar em
        contato pelo \"%s\".
    </string>


    <!-- UtilNotification -->
    <string name="notification_verbose_name">
        🎬 Vídeo novo no canal
    </string>
    <string name="notification_verbose_description">
        Notificação de novos vídeos de desenvolvimento
        Android que são liberados no canal YouTube
        Vinícius Thiengo.
    </string>


    <!-- "No main data" possible problems.  -->
    <string name="no_video_yet">
        Não há novo vídeo disponível.
    </string>
    <string name="no_playlists_yet">
        Nenhuma PlayList disponível no canal!
    </string>
</resources>