<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_app"
        android:paddingStart="@dimen/standard_screen_side_margin"
        android:paddingEnd="@dimen/standard_screen_side_margin"
        android:paddingTop="25dp"
        android:paddingBottom="25dp">

        <ImageView
            android:id="@+id/iv_youtube_logo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/youtube_content_icon_content_desc"
            android:src="@drawable/ic_youtube"
            android:tint="@android:color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_channel_logo"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/iv_youtube_logo"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:contentDescription="@string/channel_thumb_content_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/channel_logo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_channel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/cv_channel_logo"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/cv_channel_logo"
            android:ellipsize="end"
            android:fontFamily="@font/quicksand_variable_font_wght"
            android:maxLines="1"
            android:text="@string/channel_name"
            android:textSize="19sp" />

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_channel_name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/cv_channel_logo"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/channel_desc" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:background="#f1f1f1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="0dp" />
</LinearLayout>