<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_update_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LastVideoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/quicksand_variable_font_wght"
            android:maxLines="1"
            android:text="@string/last_video_content_title"
            android:textSize="18sp" />

        <include layout="@layout/no_data_message_block" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_last_video"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_last_video_thumb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/black"
                        android:scaleType="centerCrop"
                        android:src="@drawable/video_banner" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#bb000000"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/iv_last_video_play"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:background="@drawable/bg_last_video_play"
                            android:contentDescription="@string/last_video_play_content_desc"
                            android:scaleType="fitCenter"
                            android:tint="@android:color/white" />

                        <ImageView
                            android:id="@+id/iv_volume"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentBottom="true"
                            android:src="@drawable/ic_volume"
                            android:tint="@android:color/white" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/iv_volume"
                            android:src="@drawable/ic_head_phone"
                            android:tint="@android:color/white" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:src="@drawable/ic_hd_video"
                            android:tint="@android:color/white" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_like"
                            android:tint="@android:color/white" />

                    </RelativeLayout>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_touch_to_watch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_purple"
                    android:drawableStart="@drawable/ic_youtube_mini_color"
                    android:drawablePadding="10dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/touch_to_watch"
                    android:textColor="@color/colorGrey"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_comment_video"
                    android:drawableStart="@drawable/ic_comment_color"
                    android:drawablePadding="10dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/lave_a_comment"
                    android:textColor="@color/colorGrey"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_last_video_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_last_video_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:autoLink="all"
                android:ellipsize="end"
                android:maxLines="3" />
        </LinearLayout>


    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>