<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_update_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LastVideoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.LastVideoFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/quicksand_variable_font_wght"
            android:maxLines="1"
            android:text="@string/last_video_content_title"
            android:textSize="18sp" />

        <include layout="@layout/no_data_message_block" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_last_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:background="@color/colorPastelGreen"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_last_video_thumb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorOrange"
                    android:scaleType="centerCrop"
                    android:src="@drawable/video_banner" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#99000000"
                    android:padding="20dp">


                    <ImageView
                        android:id="@+id/iv_last_video_play"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/tv_touch_to_watch"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/bg_last_video_play"
                        android:contentDescription="@string/last_video_play_content_desc"
                        android:scaleType="fitCenter"
                        android:tint="@android:color/white" />

                    <TextView
                        android:id="@+id/tv_touch_to_watch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/vv_horizontal_line"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/bg_purple"
                        android:drawableStart="@drawable/ic_touch_to_watch"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/touch_to_watch"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                    <View
                        android:id="@+id/vv_horizontal_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_above="@+id/tv_last_video_title"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="20dp"
                        android:background="@android:color/white" />

                    <TextView
                        android:id="@+id/tv_last_video_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/tv_last_video_time"
                        android:layout_alignParentStart="true"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_last_video_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/bg_pastel_green"
                        android:drawableStart="@drawable/ic_time_video"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="2 min 35 sec"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </RelativeLayout>
            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>